Home-Energy: CSS - Fix flicker on tooltip in chart

--- a/web/home_energy/static/home_energy/usage.css
+++ b/web/home_energy/static/home_energy/usage.css
@@ -176,3 +176,4 @@ body
 {
     font-size: 30pt;
 }
+svg > g > g.google-visualization-tooltip { pointer-events: none }
